--- a/team.html
+++ b/team.html
@@ -31,3 +31,14 @@ title: Team
 
 </div>
 </div>
+
+<h2 class="page-header">札幌市版</h2>
+
+<div class="row credits">
+  <div class="span8 offset4">
+<ul>
+    <li>川人　隆央(Takahisa Kawando), <a href="http://www.facebook.com/kawando">Facebook:Takahisa Kawando</a></li>
+    <li>鈴木　祐亮(Yusuke Suzuki), <a href="http://twitter.com/yuskesuzki">@yuskesuzki</a></li>
+</ul>
+  </div><!-- span8 -->
+</div><!-- row credits -->
